unify stock allocation logic
